# raptor_studio

./: .gitmodules  CMakeLists.txt
.cache/clangd/index/: AttitudeCommand.cxx.37A02050D1D3FCA3.idx  AttitudeCommand.h.3F08F3C94CAF4E11.idx  AttitudeCommandPubSubTypes.cxx.E2B579086842C5D2.idx  AttitudeCommandPubSubTypes.h.FB734F21EE41327C.idx  AttitudeRateCommand.cxx.1C780A4E0A53A73C.idx  AttitudeRateCommand.h.EA6558AF4C3A37FB.idx  AttitudeRateCommandPubSubTypes.cxx.87AD8D652CEF4D05.idx  AttitudeRateCommandPubSubTypes.h.AC3821681E11B973.idx  EulerAngleZYX.cxx.A0655248E6E172A6.idx  EulerAngleZYX.h.8E241292B325B658.idx  EulerAngleZYX.h.A632791165E582AD.idx  EulerAngleZYXPubSubTypes.cxx.001C65661E4BC978.idx  EulerAngleZYXPubSubTypes.h.A81557D95953CC62.idx  Header.cxx.2764D8A365F7D26F.idx  Header.h.4535AF11CE88FC79.idx  Header.h.CC48B6E1443459B0.idx  HeaderPubSubTypes.cxx.E8F211354D7AD8B6.idx  HeaderPubSubTypes.h.2A4B5FE891258E5D.idx  Image1080p.cxx.508D026BA79D61A4.idx  Image1080p.h.A75F47C18C4973D9.idx  Image1080pPubSubTypes.cxx.5824A77AF17F7BE6.idx  Image1080pPubSubTypes.h.E7CA11A6984909C4.idx  Image720p.cxx.F2B67F4917F8761A.idx  Image720p.h.FA890700BB6FA7DE.idx  Image720pPubSubTypes.cxx.A4E39526B061B6E4.idx  Image720pPubSubTypes.h.A70EEA4C016D877A.idx  Mocap.cxx.C8CB685DE56033BE.idx  Mocap.h.6761896BB37C0D56.idx  Mocap.h.CDDBD320F02F7384.idx  MocapPubSubTypes.cxx.D0E6514453A26AA9.idx  MocapPubSubTypes.h.4740EA6D5572673C.idx  MotorSpeed.cxx.69AD247E08AEFEE1.idx  MotorSpeed.h.DCE97B71BFA18EE9.idx  MotorSpeedPubSubTypes.cxx.705FB9F02BDC52AB.idx  MotorSpeedPubSubTypes.h.3E58F5C9ED5E3199.idx  Pose.cxx.CDFDBE2987E43DD3.idx  Pose.h.A296BCB84FA859F7.idx  Pose.h.D597EACD9B176AE3.idx  PosePubSubTypes.cxx.47A458C9C182C961.idx  PosePubSubTypes.h.CF8E051B18791629.idx  (+160 more)
app/: CMakeLists.txt
app/components/: CMakeLists.txt
app/components/quad_obj/: CMakeLists.txt
app/components/quad_obj/include/: quad_obj.h
app/components/quad_obj/src/: quad_obj.cpp
app/components/quad_window/: CMakeLists.txt
app/components/quad_window/include/: quad_window.h
app/components/quad_window/src/: quad_window.cpp  quad_window.ui
app/components/realtime_plot/: CMakeLists.txt  realtime_plot.cpp  realtime_plot.ui
app/components/realtime_plot/include/: realtime_plot.h
app/components/realtime_plot/src/: realtime_plot.cpp  realtime_plot.ui
app/include/: fastdds_thread.h  mainwindow.h
app/main_window/: CMakeLists.txt
app/main_window/include/: fastdds_thread.h  mainwindow.h  mavsdk_thread.h  realtime_plot_thread.h
app/main_window/src/: mainwindow.cpp  mainwindow.ui  mavsdk_thread.cpp  realtime_plot_thread.cpp
app/src/: mainwindow.cpp  mainwindow.ui  quad_obj.ui
lib/: CMakeLists.txt
lib/communication_lib/msgs_lib/cpp_msgs/robot_msgs/quadcopter_msgs/msgs/: AttitudeCommand.h  AttitudeRateCommand.h
lib/communication_lib/msgs_lib/dds_msgs/: AttitudeCommand.idl  AttitudeRateCommand.idl
